--- a/assets/src/exifexodus.styl
+++ b/assets/src/exifexodus.styl
@@ -27,6 +27,9 @@ $teal    = #22d3ad
   color: #fff
   text-shadow: none
 
+*
+  box-sizing border-box
+
 
 html
   background-color $bgColor
@@ -39,6 +42,11 @@ html
 body
   margin 0 auto
   width 80%
+  max-width 75rem
+
+#logo
+  margin-top 4rem
+  width 100%
 
 h1, h2, h3
   font-family $advBold
@@ -48,20 +56,128 @@ h1
   line-height .9
   letter-spacing -.2rem
   margin 2rem 0
-  color $teal
+  color #444
   position relative
   left -.8rem
 
 
 h2
-  font-size 3.5rem
-  width 70%
+  font-size 3rem
+  width 80%
   line-height 1.3
-  color #bbb
+  color #999
+  margin-bottom 4rem
 
   em
     font-style normal
+    color #555
 
+
+h4
+  font-size 2.2rem
+  color #999
+  font-family $advBold
+
+
+section
+  position relative
+  clear both
+
+
+#actions
+  float left
+  width 100%
+  margin-bottom 7rem
+
+
+#photo-drop, #bookmarklet
+  font-size 2rem
+  font-weight 600
+  display inline-block
+  color #555
+  width 30rem
+
+
+#photo-drop
+  float left
+  border 1.8rem dashed #555
+  width 30rem
+  height 30rem
+  padding 0 2rem
+  text-align center
+  position relative
+  top 2rem
+  right 0
+  background-color #fff
+  overflow hidden
+
+  > *
+    pointer-events none
+
+  &.drag-hover
+    border-color $teal
+
+    > p
+      transform translateY(500%)
+
+    > div
+      color #ccc
+
+  > p
+    position relative
+    font-family $helv
+    z-index 1
+    top 50%
+    transform translateY(-50%)
+    margin 0
+    transition transform .3s
+
+  > div
+    font-weight bold
+    font-size 30rem
+    height 30rem
+    position absolute
+    width 100%
+    top 36%
+    left 0
+    transform translateY(-50%)
+    line-height 1
+    color #eee
+    margin 0
+
+
+#bookmarklet
+  float right
+  text-align center
+  margin-top 6rem
+
+  a
+    background-color #f48972
+    color #fff
+    text-decoration none
+    font-size 3.2rem
+    padding 1rem
+    cursor move
+    display inline-block
+    margin 2rem 0
+    letter-spacing -1px
+
+    &:hover
+      opacity .8
+
+
+#output
+
+  img
+    max-width 40%
+    border 2rem solid #fff
+    margin-right 1%
+    margin-bottom 1%
+    display inline-block
+    outline 1px solid #aaa
+
+  &.hidden
+    display none
 
 
 h3
@@ -83,14 +199,14 @@ h3
     position relative
     top -.2rem
     margin-left -6.5rem
+    display none
 
 
 p
   font-family monospace
-  font-size 2rem
+  font-size 1.9rem
   color #555
   line-height 1.5
-  max-width 70rem
 
   a
     color $teal
@@ -101,6 +217,16 @@ p
       color #999
 
 
+pre
+  background-color #333
+  color #fff
+  padding 1rem
+  font-size 1.4rem
+  font-weight bold
+  border-radius 2px
+  overflow hidden
+
+
 footer
   text-align center
   margin 10rem 0
@@ -108,4 +234,30 @@ footer
 
   a
     color #444
+
+
+@media only screen and (max-width: 770px)
+
+  body
+    width 90%
+
+
+  h2
+    width 100%
+
+
+  #photo-drop, #bookmarklet
+    display block
+    float none
+    margin 0 auto
+
+
+  #bookmarklet
+    margin-top 8rem
+
+
+  #photo-drop
+    width 22rem
+    height 22rem
+    border-width 1rem
 
