--- a/assets/src/exifexodus.styl
+++ b/assets/src/exifexodus.styl
@@ -65,7 +65,6 @@ body
 #logo-lines
   opacity .3
   position relative
-  z-index 100
   pointer-events none
 
 
@@ -80,7 +79,7 @@ body
   h1
     margin 0
     display inline-block
-    background-color #222
+    background-color rgba(51, 51, 51, .4)
     padding 1rem 2rem
     padding-bottom 2.5rem
     line-height 1
@@ -237,7 +236,7 @@ h3
 
 p
   font-family $mono
-  font-size 2.1rem
+  font-size 2rem
   color #bbb
   line-height 1.5
 
@@ -289,6 +288,10 @@ footer
 
   #bookmarklet
     font-size 1.7rem
+
+
+  #logo-lines
+    visibility hidden
 
 
   #logo-text
