--- a/assets/src/exifexodus.styl
+++ b/assets/src/exifexodus.styl
@@ -3,9 +3,9 @@
 $helv    = 'Helvetica Neue', Helvetica, Arial, sans-serif
 $advBold = 'adv', $helv
 $mono    = Consolas, 'Lucida Console', 'DejaVu Sans Mono', Monaco, 'Courier New', monospace
-$bgColor = #f6f7f9
-$teal    = #22d3ad
-$pink    = #EF187A
+$bgColor = #ddd
+$teal    = #FF5353
+$pink    = #fff
 
 @font-face
   font-family: 'adv'
@@ -40,7 +40,7 @@ html
   text-rendering: optimizeLegibility
   font-smoothing: antialiased
   color #222
-  background-color #333
+
 
 body
   margin 0
@@ -50,10 +50,10 @@ body
 
 #logo
   width 100%
-  background-color #333
+  background-color $bgColor
   padding 0
   margin 0 auto
-  max-width 180rem
+  max-width 100rem
   position relative
 
   img
@@ -70,33 +70,34 @@ body
 
 #logo-text
   position absolute
-  top 5vw
-  left 8rem
+  top 1vw
+  left 2rem
   line-height 1
   font-size 4vw
   color $teal
 
   h1
+    font-family $advBold
+    color #eee
     margin 0
     display inline-block
-    background-color rgba(51, 51, 51, .4)
+    background-color rgba(255, 0, 0, .7)
     padding 1rem 2rem
     padding-bottom 2.5rem
     line-height 1
 
   h2
-    color #fff
-    font-size 3vw
+    color #555
+    font-weight 200
+    font-size 3.6vw
     width 50%
     padding-left 2.5rem
-
-    em
-      font-style normal
-      text-decoration underline
+    line-height 1.3
+    margin-top 1rem
 
 
 h1, h2, h3
-  font-family $advBold
+  font-family $helv
 
 
 h4
@@ -109,6 +110,7 @@ section
   position relative
   clear both
   margin 0 auto
+  margin-bottom 8rem
   width 80%
   max-width 80rem
   color #eee
@@ -127,29 +129,25 @@ section
 
 
 #photo-drop
-  border 1vw solid $pink
-  width 30rem
-  height 30rem
+  border 1.5vw solid #eee
+  border-bottom-width 3.5vw
+  width 40rem
+  height 40rem
   padding 0 2rem
   text-align center
-  position relative
-  top 15%
-  right 0
-  background-color rgba(0, 0, 0, .5)
+  background-color #444
   overflow hidden
-  position absolute
-  margin-right 10%
-  z-index 1000
   width 22vw
   height 22vw
-  max-width 40rem
-  max-height 40rem
+  min-width 30rem
+  min-height 30rem
+  margin-top 5rem
 
   > *
     pointer-events none
 
   &.drag-hover
-    border-color $teal
+    border-color #fff
 
     > p
       transform translateY(500%)
@@ -159,7 +157,7 @@ section
 
   > p
     position relative
-    font-size 2vw
+    font-size 3.5vw
     font-family $helv
     z-index 1
     top 50%
@@ -186,17 +184,17 @@ section
 #bookmarklet
   text-align center
   margin-top 6rem
-  color #ccc
+  color #888
   margin 0 auto
   max-width 50rem
   font-size 2.2rem
-  background-color #444
+  background-color #ccc
   padding 2rem
   margin-bottom 8rem
 
   a
-    background-color $teal
-    color #333
+    background-color #444
+    color #eee
     text-decoration none
     font-size 3rem
     padding 1rem
@@ -215,9 +213,11 @@ section
 
 
 #output
+  text-align center
   h2
     font-family $helv
     font-size 2rem
+    color #666
 
   img
     max-width 40%
@@ -232,12 +232,14 @@ section
 
 h3
   font-size 3.5rem
+  color #666
+  font-weight 200
 
 
 p
   font-family $mono
   font-size 2rem
-  color #bbb
+  color #444
   line-height 1.5
 
   a
@@ -250,7 +252,7 @@ p
 
 
 pre
-  background-color #222
+  background-color #444
   color #eee
   padding 1rem
   font-size 1.4rem
@@ -272,7 +274,7 @@ footer
     color #555
 
 
-@media only screen and (max-width: 670px)
+@media only screen and (max-width: 500px)
 
   section
     width 90%
@@ -303,24 +305,19 @@ footer
       font-size 2rem
       width 80%
 
-
   #photo-drop
-    width 22rem
-    height 22rem
-    border-width 1rem
-    margin-top -2rem
-    margin-right 1rem
-    display none
+    border none
 
 
-@media only screen and (min-width: 1600px)
+
+@media only screen and (min-width: 888px)
   #logo-text
     h1
-      font-size 14rem
+      font-size 8rem
 
     h2
-      font-size 5.5rem
+      font-size 3.6rem
 
   #photo-drop > p
-    font-size 4rem
+    font-size 2.8rem
 
